NetBSD Problem Report #56802

From www@netbsd.org  Sun Apr 24 08:55:36 2022
Return-Path: <www@netbsd.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.3 with cipher TLS_AES_256_GCM_SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id F2E5A1A921F
	for <gnats-bugs@gnats.NetBSD.org>; Sun, 24 Apr 2022 08:55:35 +0000 (UTC)
Message-Id: <20220424085534.61B001A9239@mollari.NetBSD.org>
Date: Sun, 24 Apr 2022 08:55:34 +0000 (UTC)
From: nia@pkgsrc.org
Reply-To: nia@pkgsrc.org
To: gnats-bugs@NetBSD.org
Subject: npf "kernel diagnostic assertion "ret == param" failed" early in boot
X-Send-Pr-Version: www-1.0

>Number:         56802
>Category:       kern
>Synopsis:       npf "kernel diagnostic assertion "ret == param" failed" early in boot
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Apr 24 09:00:00 +0000 2022
>Closed-Date:    Fri May 17 14:15:27 +0000 2024
>Last-Modified:  Fri May 17 14:15:27 +0000 2024
>Originator:     nia
>Release:        HEAD
>Organization:
The NetBSD Foundation
>Environment:
NetBSD amnesia 9.99.96 NetBSD 9.99.96 (GENERIC) #9: Fri Apr 15 23:51:06 CEST 2022  nia@amnesia:/src/obj/sys/arch/amd64/compile/GENERIC amd64
>Description:
[     1.744446] panic: kernel diagnostic assertion "ret == param" failed: file "/src/src/sys/net/npf/npf_params.c", line 187 
[     1.744446] cpu0: Begin traceback...
[     1.744446] vpanic() at netbsd:vpanic+0x156
[     1.744446] kern_assert() at netbsd:kern_assert+0x4b
[     1.744446] ahcisata0 port 1: device present, speed: 6.0Gb/s
[     1.744446] npf_param_register() at netbsd:npf_param_register+0x143
[     1.779327] npf_conndb_sysinit() at netbsd:npf_conndb_sysinit+0x98
[     1.779327] npf_conn_init() at netbsd:npf_conn_init+0x121
[     1.779327] npfk_create() at netbsd:npfk_create+0x77
[     1.784984] npf_modcmd() at netbsd:npf_modcmd+0x70
[     1.784984] module_do_builtin() at netbsd:module_do_builtin+0x17d
[     1.784984] module_init_class() at netbsd:module_init_class+0x1cf
[     1.784984] main() at netbsd:main+0x507
>How-To-Repeat:
Not reproducible, seems very rare and random.
>Fix:

>Release-Note:

>Audit-Trail:
From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/56802 CVS commit: src/sys/net/npf
Date: Thu, 28 Apr 2022 15:43:51 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Thu Apr 28 15:43:51 UTC 2022

 Modified Files:
 	src/sys/net/npf: npf_params.c

 Log Message:
 Temporary hack to make PR 56802 (when it happens) tell us for sure that
 it is caused by KM_NOSLEEP memory allocation failure.


 To generate a diff of this commit:
 cvs rdiff -u -r1.3 -r1.4 src/sys/net/npf/npf_params.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->feedback
State-Changed-By: martin@NetBSD.org
State-Changed-When: Thu, 28 Apr 2022 17:29:17 +0000
State-Changed-Why:
Should be fixed - let's see if it happens again.


From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/56802 CVS commit: src/sys/net/npf
Date: Thu, 28 Apr 2022 17:28:15 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Thu Apr 28 17:28:15 UTC 2022

 Modified Files:
 	src/sys/net/npf: npf_params.c

 Log Message:
 Make the thmap(9) used for params use sleepable allocations,
 suggested by rmind@. Should fix PR 56802.


 To generate a diff of this commit:
 cvs rdiff -u -r1.4 -r1.5 src/sys/net/npf/npf_params.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: feedback->closed
State-Changed-By: nia@NetBSD.org
State-Changed-When: Fri, 17 May 2024 14:15:27 +0000
State-Changed-Why:
haven't seen this in years


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.47 2022/09/11 19:34:41 kim Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2024 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.